<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import
            type="androidx.core.content.ContextCompat" />
        <import
            type="com.masharo.habits.data.habit.Habit" />
        <import
            type="com.masharo.habits.support.SupportDataBinding" />
        <variable
            name="isNewHabit"
            type="boolean" />
        <variable
            name="vm"
            type="com.masharo.habits.presentation.habit.HabitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HabitActivity"
        android:padding="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_habit_save" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_habit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.habit.id == 0 ? @string/textView_habit_titleNew : @string/textView_habit_titleOld}"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:paddingBottom="40dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_theme_light_outline"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_description"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/textView_habit_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/textView_habit_priority"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/spinner_habit_priority"
                    app:layout_constraintBottom_toBottomOf="@id/spinner_habit_priority" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_theme_light_outline"
                    app:layout_constraintTop_toBottomOf="@id/spinner_habit_priority"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_theme_light_outline"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup_habit_type"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <EditText
                    android:id="@+id/editText_habit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@={vm.habit.title}"
                    android:inputType="textCapSentences"
                    android:hint="@string/editText_habit_title"
                    android:minHeight="48dp"
                    tools:layout_editor_absoluteX="10dp"
                    app:layout_constraintTop_toBottomOf="@id/textView_habit_title"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <EditText
                    android:id="@+id/editText_habit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="3"
                    android:minHeight="40dp"
                    android:gravity="start|top"
                    android:text="@={vm.habit.description}"
                    android:inputType="textMultiLine|textCapSentences"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/editText_habit_description"
                    android:backgroundTint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_title"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <Spinner
                    android:id="@+id/spinner_habit_priority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:selection="@={vm.habit.priority}"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_description"
                    app:layout_constraintLeft_toRightOf="@id/textView_habit_priority"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_habit_65vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.65" />

                <TextView
                    android:id="@+id/textView_habit_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_habit_type"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/spinner_habit_priority" />

                <RadioGroup
                    android:id="@+id/radioGroup_habit_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/textView_habit_type"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/guideline_habit_65vertical">

                    <RadioButton
                        android:id="@+id/radioButton_habit_positive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:checked="@{vm.habit.typeEnum == Habit.TypeHabit.POSITIVE}"
                        android:onClick="@{() -> vm.habit.setTypeEnum(Habit.TypeHabit.POSITIVE)}"
                        android:text="@{Habit.TypeHabit.POSITIVE.resourceString()}" />

                    <RadioButton
                        android:id="@+id/radioButton_habit_negative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:checked="@{vm.habit.typeEnum == Habit.TypeHabit.NEGATIVE}"
                        android:onClick="@{() -> vm.habit.setTypeEnum(Habit.TypeHabit.NEGATIVE)}"
                        android:text="@{Habit.TypeHabit.NEGATIVE.resourceString()}" />

                </RadioGroup>

                <ImageView
                    android:id="@+id/imageView_habit_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@{ContextCompat.getDrawable(context, vm.habit.image)}"
                    app:layout_constraintBottom_toBottomOf="@id/radioGroup_habit_type"
                    app:layout_constraintLeft_toRightOf="@id/guideline_habit_65vertical"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_habit_type" />

                <TextView
                    android:id="@+id/textView_habit_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_habit_count"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/editText_habit_count"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup_habit_type" />

                <Spinner
                    android:id="@+id/spinner_habit_period"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/habit_period"
                    android:selection="@={vm.habit.period}"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup_habit_type"
                    app:layout_constraintLeft_toRightOf="@id/editText_habit_count"
                    app:layout_constraintBottom_toBottomOf="@id/editText_habit_count"
                    app:layout_constraintRight_toRightOf="parent" />

                <EditText
                    android:id="@+id/editText_habit_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:maxLength="4"
                    android:hint="@string/editText_habit_count"
                    android:gravity="center_horizontal"
                    android:layout_marginHorizontal="5dp"
                    android:inputType="number"
                    android:text="@={SupportDataBinding.INSTANCE.convertIntToString(vm.habit.count)}"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup_habit_type"
                    app:layout_constraintRight_toLeftOf="@id/spinner_habit_period"
                    app:layout_constraintLeft_toRightOf="@id/textView_habit_count" />

                <TextView
                    android:id="@+id/textView_habit_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_habit_done"
                    android:textSize="18sp"
                    android:paddingRight="5dp"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_count"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/imageButton_habit_doneDec"
                    app:layout_constraintBottom_toBottomOf="@id/editText_habit_done" />

                <EditText
                    android:id="@+id/editText_habit_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:maxLength="4"
                    android:hint="@string/editText_habit_count"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:text="@={SupportDataBinding.INSTANCE.convertIntToString(vm.habit.countDone)}"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_count"
                    app:layout_constraintLeft_toRightOf="@id/imageButton_habit_doneDec" />

                <ImageButton
                    android:id="@+id/imageButton_habit_doneInc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_24"
                    android:onClick="@{() -> vm.doneInc()}"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_count"
                    app:layout_constraintLeft_toRightOf="@id/editText_habit_done" />

                <ImageButton
                    android:id="@+id/imageButton_habit_doneDec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_remove_24"
                    android:onClick="@{() -> vm.doneDec()}"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_count"
                    app:layout_constraintLeft_toRightOf="@id/textView_habit_done" />

                <Button
                    android:id="@+id/button_habit_colorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_habit_color"
                    android:onClick="@{() -> vm.onClickStartColorPicker()}"
                    app:layout_constraintTop_toBottomOf="@id/editText_habit_done"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@{SupportDataBinding.INSTANCE.convertColorToXML(vm.habit.color)}"
                    app:layout_constraintTop_toTopOf="@id/button_habit_colorPicker"
                    app:layout_constraintBottom_toBottomOf="@id/button_habit_colorPicker"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/button_habit_colorPicker" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/button_habit_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_habit_save"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>